--- a/index.html
+++ b/index.html
@@ -21,20 +21,23 @@
   <main>
     <section>
       <h2>Welcome</h2>
-      <p>Explore the past, present, and future of the Hypertext Transfer Protocol (HTTP)—the foundation of the web. Learn how it evolved from HTTP/0.9 to HTTP/3 and how it shapes modern digital communication.</p>
+      <p>The Hypertext Transfer Protocol, or HTTP, is one of the core technologies behind the modern internet. It defines how information is requested and delivered between web servers and clients like browsers or mobile apps. Since its introduction in the early 1990s, HTTP has gone through several major upgrades to handle the increasing complexity and scale of the web. This site explores HTTP's history, current uses, and what the future holds for the protocol.</p>
+      <p>This project is based on my research paper titled "The Evolution and Future of HTTP." My goal is to make the technical aspects of HTTP more understandable and to show how this protocol impacts everything from loading a simple webpage to running high-performance web services. Each page focuses on a specific area of the topic, helping readers learn about HTTP in a structured way.</p>
     </section>
+
     <section>
       <h2>Key Terms</h2>
       <ul>
-        <li>HTTP</li>
-        <li>HTTPS</li>
-        <li>TCP/IP</li>
-        <li>QUIC</li>
+        <li>HTTP (Hypertext Transfer Protocol)</li>
+        <li>HTTPS (Secure HTTP)</li>
+        <li>TCP/IP (Transmission Control Protocol / Internet Protocol)</li>
+        <li>QUIC (Quick UDP Internet Connections)</li>
         <li>Web Transport</li>
       </ul>
     </section>
+
     <section>
-      <h2>Pages</h2>
+      <h2>Explore the Site</h2>
       <ol>
         <li><a href="history.html">History of HTTP</a></li>
         <li><a href="modern.html">Modern Use & Future</a></li>
