--- a/resources.html
+++ b/resources.html
@@ -19,13 +19,25 @@
   </header>
   <main>
     <h2>References</h2>
+    <p>The following resources were used to research and write the content presented on this website. They include official RFC documents, research papers, developer documentation, and web articles from trusted sources. Each one provides useful background or detailed technical information about HTTP and its different versions. These citations were also included in my written assignment as part of the original research effort.</p>
     <ul>
-      <li><a href="https://www.w3.org/History/19921103-hypertext/hypertext/WWW/TheProject.html">Berners-Lee (1991)</a></li>
+      <li><a href="https://www.w3.org/History/19921103-hypertext/hypertext/WWW/TheProject.html">Berners-Lee (1991) – The WorldWideWeb Project</a></li>
+      <li><a href="https://www.rfc-editor.org/info/rfc1945">RFC 1945 – HTTP/1.0</a></li>
       <li><a href="https://www.rfc-editor.org/info/rfc2616">RFC 2616 – HTTP/1.1</a></li>
       <li><a href="https://www.rfc-editor.org/info/rfc7540">RFC 7540 – HTTP/2</a></li>
       <li><a href="https://www.rfc-editor.org/info/rfc9114">RFC 9114 – HTTP/3</a></li>
-      <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview">MDN HTTP Overview</a></li>
-      <li><a href="https://www.cloudflare.com/learning/performance/what-is-http3/">Cloudflare on HTTP/3</a></li>
+      <li><a href="https://transparencyreport.google.com/https/overview">Google Transparency Report (2023) – HTTPS usage</a></li>
+      <li><a href="https://w3techs.com/technologies/details/ce-http2">W3Techs (2024) – HTTP/2 usage statistics</a></li>
+      <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Overview">MDN – HTTP Overview</a></li>
+      <li><a href="https://www.cloudflare.com/learning/performance/what-is-http3/">Cloudflare – What is HTTP/3?</a></li>
+    </ul>
+
+    <h2>Additional Learning Resources</h2>
+    <p>If you're interested in learning more about HTTP, below are a few beginner-friendly resources. These include documentation and tutorials that explain how HTTP works in modern web development. They are especially useful for students or developers who want to explore web performance and protocol design.</p>
+    <ul>
+      <li><a href="https://http3-explained.haxx.se/en/">HTTP/3 Explained</a></li>
+      <li><a href="https://letsencrypt.org/">Let's Encrypt – Free HTTPS Certificates</a></li>
+      <li><a href="https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API">MDN – Fetch API (used over HTTP)</a></li>
     </ul>
   </main>
   <footer>
