--- a/modern.html
+++ b/modern.html
@@ -18,16 +18,13 @@
     </nav>
   </header>
   <main>
-    <h2>Current Adoption</h2>
-    <p>HTTP/2 and HTTP/3 are increasingly used across major platforms like Google, Facebook, and Cloudflare.</p>
-    <h2>Mobile and IoT</h2>
-    <p>HTTP/3 improves mobile performance and works well with IoT devices through lower latency and QUIC's resilience.</p>
-    <h2>Looking Ahead</h2>
-    <ol>
-      <li>Full adoption of HTTP/3</li>
-      <li>Integration with WebTransport</li>
-      <li>Energy-efficient optimizations</li>
-    </ol>
+    <h2>Current Adoption and Usage</h2>
+    <p>Today, HTTP is used everywhere across the internet. It powers almost every website, app, and online service. HTTP/2 is now the standard for most modern web applications, offering faster loading times and better performance. Companies like Google, Cloudflare, and Facebook have all adopted HTTP/2 and HTTP/3 to make their platforms more efficient, especially on mobile devices where speed matters most.</p>
+    <p>Besides delivering web pages, HTTP is used in APIs, cloud computing, microservices, and serverless architectures. Technologies like REST and GraphQL rely on HTTP to transfer data between clients and servers. Even things like smart devices and sensors in IoT systems sometimes use versions of HTTP to communicate with servers and cloud platforms.</p>
+
+    <h2>Looking Ahead to the Future</h2>
+    <p>Looking forward, the future of HTTP is focused on real-time communication and better efficiency. HTTP/3 is expected to become the dominant version within a few years, and new tools like WebTransport may replace WebSockets for bidirectional communication. Developers are also working to reduce energy consumption by optimizing how HTTP handles data transfers, which is important for both performance and sustainability.</p>
+    <p>Another area of growth is in lightweight protocols based on HTTP for devices with limited power or memory. These are especially important in IoT networks. As the internet continues to expand into new industries, HTTP will keep evolving to support faster, more secure, and more flexible communication between people and technology.</p>
   </main>
   <footer>
     <p>This is a class project for IT 3203. Visit the course site <a href="https://ksuweb.github.io/IT3203/" target="_blank">here</a>.</p>
